--- a/config/quantumult.conf
+++ b/config/quantumult.conf
@@ -1,6 +1,16 @@
+; 个人使用配置
 [general]
-server_check_url=http://www.gstatic.com/generate_204
+; 节点延迟测速地址
+; 默认
+; server_check_url=http://www.gstatic.com/generate_204
+; Google 感觉准确性不错
+server_check_url=http://www.google-analytics.com/generate_204
+; Apple 测速地址
+; server_check_url=http://captive.apple.com
+; excluded_routes 默认配置
+; excluded_routes=192.168.0.0/16, 193.168.0.0/24, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8
 excluded_routes=192.168.0.0/16, 193.168.0.0/24, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8
+excluded_routes=10.0.0.0/8, 127.0.0.0/8, 169.254.0.0/16, 192.0.2.0/24, 192.168.0.0/16, 198.51.100.0/24, 224.0.0.0/4
 dns_exclusion_list = *.cmpassport.com,  *.jegotrip.com.cn, *.icitymobile.mobi, *.pingan.com.cn, *.cmbchina.com
 ; 引入资源解析器
 resource_parser_url = https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
