--- a/config/quantumult.conf
+++ b/config/quantumult.conf
@@ -9,24 +9,50 @@ server_check_url=http://www.google-analytics.com/generate_204
 ; server_check_url=http://captive.apple.com
 ; excluded_routes 默认配置
 ; excluded_routes=192.168.0.0/16, 193.168.0.0/24, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8
-excluded_routes=192.168.0.0/16, 193.168.0.0/24, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8
-excluded_routes=10.0.0.0/8, 127.0.0.0/8, 169.254.0.0/16, 192.0.2.0/24, 192.168.0.0/16, 198.51.100.0/24, 224.0.0.0/4
-dns_exclusion_list = *.cmpassport.com,  *.jegotrip.com.cn, *.icitymobile.mobi, *.pingan.com.cn, *.cmbchina.com
+excluded_routes=192.168.0.0/16, 193.168.0.0/24, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, 198.51.100.0/24, 224.0.0.0/4, 127.0.0.0/8, 169.254.0.0/16, 192.0.2.0/24
+; dns_exclusion_list 默认配置
+; dns_exclusion_list = *.cmpassport.com,  *.jegotrip.com.cn, *.icitymobile.mobi, *.pingan.com.cn, *.cmbchina.com
+dns_exclusion_list = *.cmpassport.com,  *.jegotrip.com.cn, *.icitymobile.mobi, *.pingan.com.cn, *.cmbchina.com, id6.me
 ; 引入资源解析器
-resource_parser_url = https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
-geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/I-am-R-E/Functional-Store-Hub/Master/GeoLocationChecker/QuantumultX/IP-API.js
+resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
+; geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/I-am-R-E/Functional-Store-Hub/Master/GeoLocationChecker/QuantumultX/IP-API.js
+geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/IP_API.js
 
 [dns]
-no-system
-server=8.8.8.8
-server=1.1.1.1
-server=223.5.5.5
+;指定的 dns服务器
 server=114.114.114.114
-server=119.29.29.29
-doh-server=https://dns.alidns.com/dns-query
-#doh-server=https://cloudflare-dns.com/dns-query
-#doh-server=https://dns.google/dns-query
-#doh-server=https://dns-family.adguard.com/dns-query
+server=202.141.176.93 
+server=202.141.178.13
+server=117.50.10.10
+server=223.5.5.5
+server=119.29.29.29:53
+server=119.28.28.28
+;指定域名解析dns
+server=/*.taobao.com/223.5.5.5
+server=/*.tmall.com/223.5.5.5
+server=/*.alipay.com/223.5.5.5
+server=/*.alicdn.com/223.5.5.5
+server=/*.aliyun.com/223.5.5.5
+server=/*.jd.com/119.28.28.28
+server=/*.qq.com/119.28.28.28
+server=/*.tencent.com/119.28.28.28
+server=/*.weixin.com/119.28.28.28
+server=/*.bilibili.com/119.29.29.29
+server=/hdslb.com/119.29.29.29
+server=/*.163.com/119.29.29.29
+server=/*.126.com/119.29.29.29
+server=/*.126.net/119.29.29.29
+server=/*.127.net/119.29.29.29
+server=/*.netease.com/119.29.29.29
+server=/*.mi.com/119.29.29.29
+server=/*.xiaomi.com/119.29.29.29
+;server=/*testflight.apple.com/23.76.66.98
+;server=8.8.8.8
+;server=/example1.com/8.8.4.4
+;server=/*.example2.com/223.5.5.5
+;server=/example4.com/[2001:4860:4860::8888]:53
+;address=/example5.com/192.168.16.18
+;address=/example6.com/[2001:8d3:8d3:8d3:8d3:8d3:8d3:8d3]
 
 [policy]
 url-latency-benchmark=最快, server-tag-regex=^((?!Prem).)*$, check-interval=600, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Kuai.png
@@ -49,7 +75,7 @@ static=Final, 🔰 proxy, direct, 🇭🇰 Hong Kong 01, 🇭🇰 Hong Kong 02, 
 
 ; 远程地址订阅地址(比如机场订阅地址)
 [server_remote]
-
+https://sub.nexconvert.com/downloadConfig/NodeList.aspx?qx=trojan&urk=06dd23a9-038f-41fd-a011-65d974bb7612, tag=Nexitally, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Nex.png, update-interval=86400, opt-parser=false, enabled=true
 [filter_remote]
 # ------Rulesets (规则集）------
 # > China
